--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    support_version = "28.0.0"
+    compat_version = "1.0.2"
+    dagger_version = "2.14.1"
+    acrh_components_version = "1.1.1"
+}
