--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,26 @@ dependencies {
     // dagger
     implementation "com.google.dagger:dagger:${dagger_version}"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
     kapt "com.google.dagger:dagger-compiler:${dagger_version}"
+
+    // arch components
+    implementation "android.arch.lifecycle:extensions:$acrh_components_version"
+    annotationProcessor "android.arch.lifecycle:compiler:$acrh_components_version"
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
+
+    // RX Java 2.0
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
+    // Room
+    implementation "android.arch.persistence.room:runtime:${room_version}"
+    kapt "android.arch.persistence.room:compiler:${room_version}"
+
+    // ui
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
