--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     // Room
     implementation "android.arch.persistence.room:runtime:${room_version}"
     kapt "android.arch.persistence.room:compiler:${room_version}"
+    implementation "android.arch.persistence.room:rxjava2:${room_version}"
 
     // ui
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
