--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="echomskfan.gmail.com">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="echomskfan.gmail.com">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-            android:name=".MApplication"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
+        android:name=".MApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-                android:name=".presentation.SplashActivity"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:label="@string/app_name"
-                android:theme="@style/FullscreenTheme">
+            android:name=".presentation.SplashActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:theme="@style/FullscreenTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".presentation.MainActivity"/>
+        <activity
+            android:name=".presentation.MainActivity"
+            android:launchMode="singleTop" />
 
         <service
-                android:name=".presentation.player.MediaPlayerService"
-                android:enabled="true"
-                android:exported="false"/>
+            android:name=".presentation.player.MediaPlayerService"
+            android:enabled="true"
+            android:exported="false" />
 
-        <receiver android:name=".presentation.player.MediaPlayerService$NotificationPlayButtonHandler"/>
-        <receiver android:name=".presentation.player.MediaPlayerService$NotificationPauseButtonHandler"/>
+        <receiver android:name=".presentation.player.MediaPlayerService$NotificationPlayButtonHandler" />
+        <receiver android:name=".presentation.player.MediaPlayerService$NotificationPauseButtonHandler" />
         <receiver android:name=".presentation.player.MediaPlayerService$NotificationCloseButtonHandler" />
     </application>
 
