--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
 
         <activity
             android:name=".presentation.main.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleTop" />
 
         <service
