Connectivity state monitor. Config for the showing delay

--- a/app/src/main/assets/config.json
+++ b/app/src/main/assets/config.json
@@ -3,6 +3,9 @@
     "debugPanelEnabled": true
   },
   {
-    "disclaimerEnabled": true
+    "disclaimerEnabled": false
+  },
+  {
+    "showOnlineStateDelayMSec": 2000
   }
 ]
