--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,5 @@ ext {
     dagger_version = "2.14.1"
     acrh_components_version = "1.1.1"
     room_version = "1.0.0"
+    nav_version = "2.2.2"
 }
