SplashActivity params are under the config

--- a/app/src/main/assets/config.json
+++ b/app/src/main/assets/config.json
@@ -7,5 +7,11 @@
   },
   {
     "showOnlineStateDelayMSec": 2000
+  },
+  {
+    "showSplashAnimation": true
+  },
+  {
+    "splashDelayMSec": 500
   }
 ]
