--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:${room_version}"
 
     // ui
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.0.0"
     implementation 'com.squareup.picasso:picasso:2.5.2'
