--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,6 +110,10 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.0.0"
     implementation 'androidx.cardview:cardview:1.0.0'
 
+    // WorkManager
+    implementation "androidx.work:work-runtime:2.4.0"
+    implementation "androidx.work:work-runtime-ktx:2.4.0"
+
     // Tests
     testImplementation 'junit:junit:4.13'
     testImplementation 'org.mockito:mockito-core:2.8.9'
