--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,6 +140,11 @@ dependencies {
     implementation "androidx.work:work-runtime:2.4.0"
     implementation "androidx.work:work-runtime-ktx:2.4.0"
 
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
     // Tests
     testImplementation 'junit:junit:4.13'
     testImplementation 'org.mockito:mockito-core:2.8.9'
