--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,6 +145,9 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
+    // Chrome tabs
+    implementation "androidx.browser:browser:1.3.0"
+
     // Tests
     testImplementation 'junit:junit:4.13'
     testImplementation 'org.mockito:mockito-core:2.8.9'
