Config params for the workmanager

--- a/app/src/main/assets/config.json
+++ b/app/src/main/assets/config.json
@@ -16,5 +16,11 @@
   },
   {
     "clickOnCastToWebEnabled": true
+  },
+  {
+    "checkNewInitialDelayInMin": 15
+  },
+  {
+    "checkNewDurationInMin": 60
   }
 ]
