Refactoring. DI. Constructor injections, ViewModels onto a map. Debug panel.

--- a/app/src/main/assets/config.json
+++ b/app/src/main/assets/config.json
@@ -12,7 +12,7 @@
     "splashDelayMSec": 1000
   },
   {
-    "debugPanelEnabledForDebugBuild": false
+    "debugPanelEnabledForDebugBuild": true
   },
   {
     "clickOnCastToWebEnabled": true
